# python-project-lvl1

./: README.md  pyproject.toml
.github/workflows/: hexlet-check.yml
artifacts/: coverage.xml
data/: coverage.xml
